src/objects/CEC_Product_Locator__c.object
<CustomObject>
    <description>CEC: To store the product Locator information</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseStoreId__c</fullName>
        <externalId>true</externalId>
        <label>CaseStoreId</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Product Locator</relationshipLabel>
        <relationshipName>Product_Locator</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <inlineHelpText>Distance from the center of the Zip code in Miles to this Store</inlineHelpText>
        <label>Distance</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Id__c</fullName>
        <label>Store Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Store_Number__c</fullName>
        <label>Store Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPC_Code__c</fullName>
        <label>UPC Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Product Locator</label>
    <nameField>
        <displayFormat>PL-{00000000}</displayFormat>
        <label>Product Locator Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Locator</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>